# colliery-graphqlite

./: .clangd  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile
.angreal/: task_test.py
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
.metis/: .index-dirty  code-index-hashes.json  code-index-symbols.json  code-index.md  ralph-tck-70.md
bindings/rust/: Cargo.toml
bindings/rust/examples/: tck_runner.rs
bindings/rust/src/: connection.rs  lib.rs  manager.rs  platform.rs  query_builder.rs  result.rs  utils.rs
bindings/rust/src/algorithms/: centrality.rs  community.rs  components.rs  parsing.rs  paths.rs  similarity.rs  traversal.rs
bindings/rust/src/graph/: batch.rs  bulk.rs  edges.rs  mod.rs  nodes.rs  queries.rs
bindings/rust/tests/: integration.rs
docs/: cypher-coverage-matrix.md  cypher-feature-checklist.md
docs/internal/: sql-migration-inventory.md
docs/src/: SUMMARY.md  introduction.md
docs/tck/: baseline-2026-05-13.json  baseline-2026-05-13.md  triage-2026-05-13.md
docs/testing/: semantic-coverage-matrix.md
scripts/: check-coverage-matrix.sh  check-tck-baseline.sh  refresh-tck.sh
src/: bundled_init.c  extension.c
tests/: test_agtype.c  test_executor_clauses.c  test_executor_functions.c  test_executor_merge.c  test_executor_relationships.c  test_executor_set.c  test_executor_unwind.c  test_parser.c  test_query_dispatch.c  test_scanner.c  test_sql_builder.c  test_transform_functions.c  test_transform_return.c  test_transform_set.c
tests/functional/: 07_agtype_compatibility.sql  101_spec_compliance_test.sql  (+12 more)
(+502 files in other folders)
