[package]
name = "graphqlite"
version = "0.3.8"
edition = "2021"
description = "SQLite extension for graph queries using Cypher"
license = "MIT"
repository = "https://github.com/colliery-io/graphqlite"
readme = "README.md"
keywords = ["sqlite", "graph", "cypher", "database"]
categories = ["database"]
exclude = ["tests/", "target/"]
include = ["src/**/*", "libs/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
rusqlite = { version = ">=0.31", features = ["bundled", "load_extension"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# No build dependencies - pre-built binaries are embedded via include_bytes!()

[dev-dependencies]
tempfile = "3.10"

[features]
default = ["bundled-extension"]
bundled-extension = []  # Bundle the compiled extension (recommended)
